Fix horizontal scrolling at wide widths

--- a/web/themes/pubsub/sass/base/css-variables.scss
+++ b/web/themes/pubsub/sass/base/css-variables.scss
@@ -8,6 +8,10 @@
   --toolbar-tray-height: 40px;
   --toolbar-tray-vertical-width: 239px;
 
+  /* Layout */
+  --layout--max-width: 1400px;
+  --scrollbar-width: 16px;
+
 
   /* Layout helpers */
   --sp: 1rem; // 16px.
